# AxoPane

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.mjs  pnpm-lock.yaml  rust-coverage.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: RELEASE_CHECKLIST.md  tauri-release-body.md
.github/workflows/: ci.yml  cleanup_old_releases.yml  release.yml
e2e/: global-setup.ts  helpers.ts  screenshots.spec.ts  smoke.spec.ts  tab-drag-zoom.spec.ts
scripts/: bump-tauri-version.mjs  ensure-playwright-port.mjs  run-rust-coverage.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  nextest.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bounded_cache.rs  clipboard.rs  file_icons.rs  launch.rs  lib.rs  main.rs  reconcile.rs
src-tauri/src/app_picker/: bundle.rs  icns.rs  macos.rs  mod.rs  scan.rs  types.rs  unsupported.rs
src-tauri/src/archive/: mod.rs  unsupported.rs  zip_backend.rs
src-tauri/src/directory_session/: mod.rs  model.rs  paging.rs  view.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/ipc/: commands.rs  events.rs  executor.rs  icon_batch.rs  mock.rs  mod.rs  types.rs
src-tauri/src/item_counts/: cache.rs  mod.rs
src-tauri/src/listing/: mod.rs
src-tauri/src/logging/: logger.rs  mod.rs
src-tauri/src/native_menu/: fake_provider.rs  helper_entry.rs  helper_protocol.rs  helper_supervisor.rs  macos.rs  menu_cache.rs  mod.rs  modern_match.rs  provider.rs  shell_executor.rs  token_store.rs  types.rs  unsupported.rs  warm_pool.rs  windows.rs  windows_modern.rs  windows_shell.rs
src-tauri/src/ops/: archive.rs  manifest.rs  mod.rs  worker.rs
src-tauri/src/ops/transfer/: macos.rs  mod.rs  portable.rs  windows.rs
src-tauri/src/persist/: mod.rs
src-tauri/src/resource_coordinator/: mod.rs  queue.rs
src-tauri/src/size/: everything.rs  manual.rs  mod.rs  scheduler.rs
src-tauri/src/thumbnails/: cache.rs  fake_provider.rs  macos.rs  mod.rs  provider.rs  scheduler.rs  types.rs  unsupported.rs  windows.rs
src-tauri/src/trash/: dsstore.rs  macos_adapter.rs  macos_bin.rs  manifest.rs  mod.rs  windows_bin.rs
src-tauri/src/traversal/: ignore_backend.rs  mod.rs
src-tauri/src/volumes/: disk_arbitration.rs  eject.rs  mod.rs  registry.rs  windows_watch.rs
src-tauri/src/watch/: coordinator.rs  mod.rs  patch.rs
src-tauri/tests/: app_picker_bundle_integration.rs  app_picker_command_integration.rs  app_picker_icns_integration.rs  app_picker_scan_integration.rs  apphandle_smoke_integration.rs  archive_zip_integration.rs  fs_helpers_integration.rs  fs_icons_integration.rs  fs_listing_integration.rs  fs_mutation_edges_integration.rs  fs_mutations_integration.rs  fs_private_integration.rs  ipc_contract_integration.rs  ipc_execution_matrix_integration.rs  ipc_icon_batch_integration.rs  ipc_start_list_dir_integration.rs  ipc_state_commands_integration.rs  ipc_state_manager_integration.rs  ipc_stateful_integration.rs  ipc_thumbnail_integration.rs  ipc_wry_commands_integration.rs  item_counts_integration.rs  launch_open_path_integration.rs  listing_session_integration.rs  logging_commands_integration.rs  logging_format_integration.rs  logging_frontend_integration.rs  logging_writer_integration.rs  main_entry_integration.rs  native_menu_cache_integration.rs  native_menu_contract_integration.rs  native_menu_helper_integration.rs  native_menu_modern_integration.rs  native_menu_provider_integration.rs  native_menu_warm_integration.rs  native_menu_windows_stub_integration.rs  ops_helpers_integration.rs  ops_private_integration.rs  ops_queue_integration.rs  ops_single_file_progress_throttle_integration.rs  (+31 more)
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: trash_put_back.dsstore
src/lib/: app-config.ts  app-log-commands.ts  app-picker-commands.ts  (+29 more)
(+227 files in other folders)
