[package]
name = "file-explorer"
version = "0.1.0"
description = "Phase 1 scaffold for the file explorer"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "file_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
dunce = "1.0.5"
jwalk = "0.8.1"
lexical-sort = "0.3.1"
libloading = "0.8.9"
log = "0.4.22"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2.7.0"
tauri-plugin-updater = "2.9.1"
sysinfo = "0.37.2"
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.23.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_NetworkManagement_WNet", "Win32_Storage_FileSystem"] }
windows = { version = "0.61.3", features = ["Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
test-utils = []
