[package]
name = "file-explorer"
version = "1.19.11"
description = "Phase 1 scaffold for the file explorer"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "file_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.6.3", features = [] }

[dependencies]
base64 = "~0.22.1"
dunce = "~1.0.5"
jwalk = "~0.8.1"
lexical-sort = "~0.3.1"
libc = "~0.2.186"
libloading = "~0.8.9"
log = { version = "~0.4.33", features = ["std"] }
notify = "~8.2.0"
png = "~0.17.16"
rayon = "~1.12.0"
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.150"
tauri = { version = "~2.11.3", features = ["test"] }
tauri-plugin-prevent-default = "~4.0.4"
tauri-plugin-process = "~2.3.0"
tauri-plugin-updater = "~2.10.1"
tauri-plugin-window-state = "~2.4.1"
sysinfo = "~0.37.2"
time = { version = "=0.3.51", features = ["formatting", "local-offset"] }
trash = "~5.2.2"
zip = { version = "~4.6.1", default-features = false, features = ["deflate"] }
clipboard-rs = "0.2.4"

[target.'cfg(windows)'.dependencies.roxmltree]
version = "~0.20.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "~0.6.2", default-features = false, features = ["std"] }
core-foundation-sys = "~0.8.7"
dispatch2 = { version = "~0.3.1", default-features = false, features = ["std"] }
objc2 = { version = "~0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = { version = "~0.3.2", default-features = false, features = ["std", "NSWorkspace", "block2", "objc2-uniform-type-identifiers"] }
objc2-foundation = { version = "~0.3.2", default-features = false, features = ["std", "NSString", "NSURL", "NSError"] }
objc2-uniform-type-identifiers = { version = "~0.3.2", default-features = false, features = ["std", "UTType"] }

[dev-dependencies]
tempfile = "~3.27.0"

[target.'cfg(windows)'.dependencies]
tauri-plugin-prevent-default = { version = "~4.0.4", features = ["platform-windows"] }
windows-sys = { version = "~0.61.2", features = ["Win32_Foundation", "Win32_NetworkManagement_WNet", "Win32_Storage_FileSystem"] }
windows = { version = "~0.61.3", features = ["Win32_Devices_DeviceAndDriverInstallation", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_Storage_Packaging_Appx", "Win32_System_Com", "Win32_System_DataExchange", "Win32_System_IO", "Win32_System_Ioctl", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
test-utils = []
